3PalmsSecurity/Content/site.css
h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    font-family: "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
    font-weight: 300;
    line-height: 1.1;
}

body {
    padding-bottom: 20px;
    padding-top: 150px;
    overflow-x: hidden;
}

h1 {
    font-family: Verdana, Geneva, Tahoma, sans-serif
}

/*margin-top is -20 to hide fixed image in .header*/ 
.footer {
    margin-top: -20px;
    background-color: white;
}

.header {
    position: relative;
    background-color: transparent !important;
    background-image: url(/Content/Images/header-image-2000x705-compressed.png);
    background-size: 100% auto;
    background-attachment: fixed;
    background-position-y: 150px;
    background-repeat: no-repeat;
}

/*resolves resize issue with .header image at width 767 px or fewer*/ 
@media (max-width: 767px) {
    .header img {
        margin-left: 20px;
        margin-bottom: -15px;
    }
}

@media screen and (max-device-width: 1024px) {
    .header {
        background-attachment: scroll;
        background-position-y: 0px;
    }

    .section-title, .section-subtitle, .section-text {
        margin-left: auto !important;
        margin-right: auto !important;
    }
}

 /* small devices */
@media screen and (max-width: 480px) {
    .section-title, .section-subtitle, .section-text {
        margin-left: auto !important;
        margin-right: auto!important;  
    }

    .header {
        background-image: url(/Content/Images/header-image-phone-compressed.png);
    }

    .navbar-brand {
        margin: auto !important;
    }

    .solutions-img {
        max-width: 90% !important;
    }
}

.banner {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100px;
    box-sizing: border-box;
    background: rgba(78, 84, 88, 0.8);
    color: #fff;    
    display: table;
}

.banner-text {
    text-align: center;
    display: table-cell;
    vertical-align: middle;
}

.banner-text h2, h3 {
    margin: 10px 30px 10px 30px;
}

/* QR code generator */
#qrCode {
    margin: 15px;
}

.nav-item {
    margin-left: 10px;
    margin-right: 10px;
    display: inline-block;
}

.navbar-brand {
    margin-left: 2%;
}

.navbar {
    min-height: 75px;
    background-color: white;
    border-bottom: solid;
    border-width: 5px;
    border-color: rgb(240, 240, 240);
    /*background-color: #e3f2fd;*/
}

.navbar-row {
    margin-right: 30px;
}

.btn-outline-primary {
    color: rgb(127, 127, 127) !important;
    background-color: transparent !important;
    border-color: rgb(127, 127, 127) !important;
}

.btn-outline-primary:hover {
    background-color: rgb(78, 84, 88) !important;
    color: white !important;
}

.btn-outline-secondary {
    color: black !important;
    background-color: white !important;
    border-color: rgb(63, 93, 109) !important;
}

.btn-outline-secondary:hover {
    background-color: rgb(158, 158, 158) !important;
    color: black !important;
}

.btn-outline-secondary-disabled {
    color: black !important;
    background-color: rgb(237, 229, 206) !important;
    border-color: rgb(63, 93, 109) !important;
}

.img-circle {
    border-radius: 50%;
    border: 1px solid black;
}

.navbar i.fa {
    display: inline-block;
    border-radius: 60px;
    box-shadow: 0px 0px 2px #888;
    padding: 0.5em 0.6em;
}

/*
*   WHO WE SERVE
*/

#who-we-serve {
    background-color: white;
}

#who-we-serve .col-md {
    text-align: center;
    display: block;
    margin: auto;
    padding: 20px;
}

#who-we-serve h5 {
    text-align: center;
}

.serve-header .section-subtitle{
    margin-right: auto !important;
    margin-left: auto !important;
    padding: 10px;
}

/*
*   SECTIONS
*/

.section {
    padding: 40px;
}

.section-title {
    margin-bottom: 10px;
    text-align: center;
}

.section-subtitle {
    margin-bottom: 20px;
    font-weight: 400;
}

.section-subtitle > li {
    margin-top: 10px;
}

.section-subtitle {
    /*margin-left: 70px;
    margin-right: 70px;*/
    text-align: center;
}

.section-text {
    margin-right: 70px;
    margin-left: 70px;
    min-width: 300px;
    text-align: justify;
}

/*
*   WHAT WE DO
*/

#what-we-do {
    background-color: white;
}

#what-we-do .col {
    text-align: center;
    display: block;
    margin: auto;
    padding: 20px;
}

/*
*   WHO WE ARE
*/

#who-we-are .col-lg {
    text-align: center;
    display: block;
    padding: 20px;
}

#who-we-are {
    background-color: rgb(133, 26, 32);
    color: white;
}

#who-we-are p {
    margin-bottom: 40px;
}

.about-img {
    border-radius: 50%;
    margin-bottom: 20px;
}

#who-we-are-images h5 {
    font-style: italic;
}

#who-we-are p {
    margin-top: 20px;
}

/*
*   SOLUTIONS
*/

#solutions {
    min-height: 400px;
    background-color: rgb(78, 84, 88);
    color: white;
}

#solutions .col {
    text-align: center;
    display: block;
    margin: auto;
    padding: 20px;
}

#solutions .col-md-6 {
    text-align: center;
    display: block;
    padding: 20px;
}

#solutions img {
    max-height: 100%;
}

#solutions img:hover {
    opacity: 0.6;
}

#solutions > col {
    vertical-align: middle;
}

.solutions-img-container {
    height: 80px;
    margin-bottom: 40px;
    position: relative;
}

.solutions-img {
    max-width: 50%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

/*
*  CONTACT US
*/

#contact-us {
    min-height: 400px;
    background-color: rgb(78, 84, 88);
    color: white;
}

#contact-us .col {
    display: block;
    margin: auto;
}


#contact-us a {
    text-align: center;
    display: block;
    margin: auto;
}

.contact-us-form {
    padding-top: 20px;
    padding-bottom: 20px;
    margin: auto;
    margin-bottom: 20px;
    max-width: 800px;
}

#contact-us a {
    display: inline-block;
}

.social-icon-container {
    text-align: center;
}

.social-icon {
    color: white;
    margin-right: 25px;
    margin-left: 25px;
}

.social-icon:hover {
    opacity: 0.7;
}

/*full width container*/
@media (max-width: 767px) {
    .block {
        margin-left: -20px;
        margin-right: -20px;
    }
}

.nav-link:hover {
    cursor: pointer;
}

/*loader animations for loading lists and for saving*/
.loader {
    margin: auto;
    position: center;
    border: 3px solid #f3f3f3; /* Light grey */
    border-top: 3px solid rgb(63, 93, 109); /* Blue */
    border-radius: 50%;
    width: 2em;
    height: 2em;
    font-size: 10px;
    animation: spin 2s linear infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

#error-img {
    position: fixed;
    top: -50%;
    left: -50%;
    width: 200%;
    height: 200%;
}

#error-img img {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    min-width: 50%;
    min-height: 50%;
}

.top-row {
    margin-top: 50px;
}

.bottom-row {
    margin-bottom: 50px;
}

